--- a/src/events/2024.yaml
+++ b/src/events/2024.yaml
@@ -22,6 +22,13 @@
   refs:
     luma: w3pn-meetup-devcon7
     web: https://congress.web3privacy.info/
+  imgs:
+    - path: cypherpunk-congress-2024-square.webp
+      type: square
+    - path: cypherpunk-congress-2024-logo.webp
+      type: logo
+    - path: cypherpunk-congress-2024-poster.webp
+      type: poster
   speakers:
     - vitalik-buterin
     - jarrad-hope
