--- a/src/events/2025.yaml
+++ b/src/events/2025.yaml
@@ -44,6 +44,9 @@
     - Fronéma Lark
     - Vláďa Krupa
     - Timofej Kožuchov
+  imgs:
+    - path: ksp25.jpg
+      type: banner
   description: |
     Progresivní společenské síly toužící po změnách a vývoji jsou od pradávna v určitém konfliktu se silami konzervativními toužícími po zachování statu quo a časem ověřeného odkazu našich předků; oba protipóly mají svůj velký smysl pro vývoj naší společnosti – bez progresivistů bychom se příliš neposouvali, zatímco bez konzervativců bychom snáze přijímali i změny, kterými se můžeme poškodit. Nejrůznější hnutí pro či proti pokroku či novým společenským pořádkům, kde se dobrovolně sdružují lidé podobného smýšlení, považuji za živnou půdu pro zdravou civilizaci; bohužel však problémy – jako vždy – přicházejí ve chvíli, kdy se tyto názorové proudy začnou snažit uchopit státní moc a náslím skrze ni nutit svůj pohled na svět těm, kdo s ním nesouzní.
 
