--- a/src/events/2023.yaml
+++ b/src/events/2023.yaml
@@ -579,6 +579,7 @@
   date: "2023-09-15"
   name: "Protocol Berg"
   project: protocol-berg
+  major: true
   seq: 1
   place:
     name: Heeresbäckerei, Kreuzberg
