update speakers by videos

--- a/src/events/2016.yaml
+++ b/src/events/2016.yaml
@@ -21,6 +21,10 @@
     - sam-patterson
     - paul-rosenberg
     - timothy-c-may
+    - Francisco Grau
+    - Jonathan Dawson
+    - Felix Weis
+    - Martin Wismeijer
 
 - id: 2016-05-10-bitsquare-the-decentralized-bitcoin-exchange-en
   name: Bitsquare - The Decentralized Bitcoin Exchange (EN)
