--- a/src/events/2017.yaml
+++ b/src/events/2017.yaml
@@ -72,6 +72,25 @@
     - chris-beams
     - david-hemmerle
     - josef-sima
+    - arto-bendiken
+    - habo
+    - smuggler
+    - joerg-platzer
+    - Noud van Gemert
+    - Reynier Jonkers
+    - Aleš Rod
+    - Daniel Krawisz
+    - Paige Peterson
+    - alexa-martinez
+    - Tim Menapace
+    - Oldřich Dědek
+    - Aleš Michl
+    - Jakub Jedlinský
+    - Jan Hubík
+    - Maria Staszkiewicz
+    - pablo-coirolo
+    - Nikolai Oster
+    - alena-vranova
 
 - id: 2017-10-03-life-nomadic-with-bitcoin
   name: Life nomadic with Bitcoin
