--- a/src/events/2018.yaml
+++ b/src/events/2018.yaml
@@ -222,6 +222,20 @@
     - jw-weatherman
     - pavol-travnik
     - sonja-prstec
+    - martin-leskovjan
+    - Richard Myers
+    - Dimi "m2049r" Divak
+    - Todd Weaver
+    - alena-vranova
+    - Austin Craig
+    - juraj-bednar
+    - binaryFate
+    - Arno Pfefferling
+    - Beatriz Ramos
+    - Jim Warnock
+    - Jakub Krcmar
+    - Stepan Snigirev
+    - Lidija Zavoralova
 
 
 - id: 2018-07-16-paralelni-polis-or-jde-ven
