--- a/src/events/2019.yaml
+++ b/src/events/2019.yaml
@@ -51,6 +51,26 @@
     - tomas-marada
     - spyros-dovas
     - inbar-preiss
+    - Alexander Isavnin
+    - Reinaldo Escobar Casas
+    - Michal Takáč
+    - Artur Sychov
+    - Karel Hulec
+    - Mirek Nečas
+    - Veronika Jelínková
+    - Radek Pilich
+    - wilder
+    - Nelson Melina
+    - Marc Guals
+    - Gideon Gallasch
+    - smuggler
+    - martin-leskovjan
+    - Tomas Kanócz
+    - Ken Schoolland
+    - alena-vranova
+    - Jason Evans
+    - ketominer
+    - Bitcannery
 
 - id: 2019-12-19-vanocni-kryptovecirek
   name: Vánoční Kryptovečírek
