--- a/src/events/2020.yaml
+++ b/src/events/2020.yaml
@@ -33,6 +33,21 @@
     - sara-polak
     - travin-keith
     - silur
+    - PETR SVARNY
+    - JASON EVANS
+    - JOHNSON YEUNG
+    - ALEKOS FILINI
+    - JSTARK1809
+    - THOMAS NÄGELE
+    - MARK BALLANDIES
+    - VIKTOR TRON
+    - JAN URBAN
+    - CHAD
+    - NADIA
+    - PAVLA HOLCOVA
+    - pavla-holcova
+    - Chad
+    - Nadia
   aftermovie: 8QYNUPxLdGw
 
 - id: noncon20
@@ -905,6 +920,8 @@
     - Lidija Zavoralová
     - Adam Růžička
     - Rivok
+    - Richard Vokoun
+    - Tereza Urzová
 
 - id: 2020-01-31-juraj-bednar-or-hackni-sa
   name: Juraj Bednár | Hackni sa
