--- a/src/events/2021.yaml
+++ b/src/events/2021.yaml
@@ -53,6 +53,8 @@
     web: https://chaos.hcpp.cz
   speakers:
     - tey-el-rjula
+    - Cryptorg Art
+    - Bitcoin Rehab Podcast
   aftermovie: vc2AZPTMWcI
 
 - id: ksp21
@@ -73,3 +75,4 @@
     - Gabriela Ježková
     - Zuzana Candigliota
     - Zdeňka Šíp Staňková
+    - Krkavčí matka
