--- a/src/events/2022.yaml
+++ b/src/events/2022.yaml
@@ -19,6 +19,39 @@
     - sara-polak
     - jarrad-hope
     - wlodek-gogloza
+    - Thomas Zeinzinger
+    - Peter Grassberger
+    - Camila Ramos Garzon
+    - Althea Allen
+    - MP Fernandez
+    - Dankrad Feist
+    - Lizette Kuld
+    - Kresimir Vuksan
+    - SteveFau
+    - Matteo Alessio Tambussi
+    - Diego Losada
+    - Fernando Collado
+    - Sam Gittis
+    - Avihu Mordechai Levy
+    - Liesl Eichholz
+    - Martin Maurer
+    - James Zaki
+    - Guillaume Ballet
+    - dcbuilder
+    - Makoto Inoue
+    - Bengisu Berispek
+    - Dobroslawa Gogloza
+    - peter-szilagyi
+    - Lightclient
+    - Daniel Vaczi
+    - Martin Baric
+    - Marius van der Wijden
+    - Miao ZhiCheng
+    - Sasha Shilina
+    - Thor Kamphefner
+    - franzi
+    - David Mihal
+    - Andrej Berlin
   organizers:
     - mario
     - josefj
@@ -43,6 +76,8 @@
     - exiledsurfer
     - sergej-kotliar
     - ruben-somsen
+    - Aaron Van Wirdum
+    - wilder
   organizers:
     - mario
 
@@ -642,6 +677,13 @@
     - janine
     - ariel-gabizon
     - alexandra-moxin
+    - juraj-bednar
+    - mario
+    - exiledsurfer
+    - Obi Nwosu
+    - amir-taaki
+    - wilder
+    - Gregor Žavcer
   aftermovie: MDJLELT0fpw
 
 - id: 2022-09-26-bitcoin-meetup-or-vzestup-a-pad-bitcoin-kultury
@@ -788,3 +830,7 @@
     - Mojmír Hampl
     - Lukáš Kovanda
     - Petr Bartoň
+    - Tereza Urzová
+    - Honza Pobořil
+    - Marianna Sádecká
+    - L. Kovanda
