--- a/src/people/people.yaml
+++ b/src/people/people.yaml
@@ -1266,3 +1266,9 @@
   img: dcbuilder.jpg
   refs:
     twitter: DCbuild3r
+
+- id: peter-szilagyi
+  name: Péter Szilágyi
+  altNames:
+    - Péter Szilagyi
+  img: peter-szilagyi.jpeg
