update monerokon5 id

--- a/src/events/2025.yaml
+++ b/src/events/2025.yaml
@@ -24,7 +24,7 @@
 
     Follow us on [X](https://x.com/protocol_berg), [Bluesky](https://bsky.app/profile/protocol.berlin), or [Matrix](https://matrix.to/#/%23protocol:dod.ngo) for updates. For the previous event, see [Protocol Berg 2023](https://2023.protocol.berlin/).
 
-- id: monerokon
+- id: monerokon5
   name: Monero Konferenco 5
   place:
     city: Prague
