--- a/src/events/2024.yaml
+++ b/src/events/2024.yaml
@@ -1,3 +1,18 @@
+- id: cdc-ccc-2024
+  date: "2024-12-27"
+  name: Critical Decentralisation Cluster @ 38C3
+  project: cdc
+  days: 4
+  place:
+    city: Hamburg
+    country: de
+  refs:
+    web: https://decentral.community/
+  description: |
+    The *Critical Decentralisation Cluster* (CDC) is a group of likeminded assemblies working together to present projects, talks and workshops that critically discuss the future of decentralisation. You can visit us during Dec 27-30 2024 in Hamburg (Germany) at the [38th Chaos Communication Congress](https://en.wikipedia.org/wiki/Chaos_Communication_Congress).
+
+    We are part of the Community Content Team of 38C3 and helped putting together the [Community Stages program](https://content.events.ccc.de/cfp/38c3-community-stages/index.en.html). We are also hosting our own talks and workshops: [CDC program at 38C3](https://pretalx.riat.at/38c3/cfp).
+
 - id: logos-parallel-society-congress-2024
   date: "2024-11-11"
   project: logos
