--- a/src/events/2024.yaml
+++ b/src/events/2024.yaml
@@ -56,6 +56,51 @@
     - amir-taaki
     - rachel-rose
     - exiledsurfer
+    - Juan Benet
+    - Michelle Lai
+    - Nathan Ginnever
+    - Kieran Mesquita
+    - Garrett Macdonald
+    - Aidan Hyman
+    - Arnaud Deville
+    - Aqeel Mohammad
+    - Josh Davila
+    - Ying Tong
+    - Alan
+    - pg
+    - Manu Alzuru
+    - Luis Bezzenberger
+    - Shady El Damaty
+    - bob-summerwill
+    - Yannik Schrade
+    - Robert De Groot
+    - Wassim Alsindi
+    - Costanza Gallo
+    - Oskarth
+    - Kris Is
+    - Lasha Antatze
+    - Julio Linares
+    - Sam Hart
+    - Andreas Fileverse
+    - Daniel Luca
+    - Nate
+    - Leona Hioki
+    - Christopher Goes
+    - Pie Man
+    - Amit
+    - Adrian Brink
+    - Yana Matrosova
+    - Park
+    - Fatemeh Fannizadeh
+    - Tuba Eldem
+    - Nelly Cornejo
+    - Claire Kart
+    - Peter Van Valkenburgh
+    - Naomi Brockwell
+    - dr-nick
+    - lefteris-karapetsas
+    - ameen-soleimani
+    - Sebastian Bürgel
   caption: |
     Historical communal gathering defining Cypherpunk values, culture and actions within the Ethereum ecosystem.
   description: |
@@ -102,6 +147,23 @@
     - florian-glatz
     - oskar-thoren
     - christian-lewe
+    - Eric Sirion
+    - max-hillebrand
+    - max-hampshire
+    - Liam Eagen
+    - silke-noa
+    - Vecna
+    - rachel-rose
+    - Jeff Strnad
+    - matthias-tarasiewicz
+    - Oskar Thoren
+    - habo
+    - amin-rafiee
+    - Бого
+    - Michal Kodnar
+    - Neiman
+    - Karo Zagorus
+    - travin-keith
   organizers:
     - kx
 
