eth cypherpunk congress aftermovie

--- a/src/events/2024.yaml
+++ b/src/events/2024.yaml
@@ -113,6 +113,7 @@
     Join us in Bangkok on November 11th 2024 at this congress as part of [DevCon](https://devcon.org/).
 
     [READ OUR MANIFESTO](https://congress.web3privacy.info/manifesto.html)
+  aftermovie: -1-qsbZOYtQ
 
 - id: hcpp24
   name: "HCPP24: Hardcore"
