add people from w3pn-ecc

--- a/src/events/2024.yaml
+++ b/src/events/2024.yaml
@@ -437,7 +437,7 @@
     - mykola-siusko
     - Julio
     - Jaya
-    - Sebastian
+    - sebastian-burgel
     - Peter Van Valkenburgh
     - lefteris-karapetsas
     - Fatemeh Fannizadeh
