update juan benet bsky

--- a/src/people/people.yaml
+++ b/src/people/people.yaml
@@ -1332,6 +1332,7 @@
   caption: Obsessed with Knowledge, Science, and Technology -- Protocol Labs, IPFS, Filecoin
   refs:
     web: https://juan.benet.ai
+    bsky: did:plc:u7ogakzcsjbznd3fiauhcpcd|juanbenet.bsky.social
     twitter: juanbenet
 
 - id: peter-van-valkenburgh
