--- a/src/structures/ww3p/index.yaml
+++ b/src/structures/ww3p/index.yaml
@@ -1,6 +1,9 @@
 name: Women in web3 Privacy
 labels:
   - community
+img: ww3p.jpg
 refs:
   web: https://www.womeninweb3privacy.com/
   twitter: WWeb3Privacy
+caption: |
+  Empowering women, especially in vulnerable communities, with the knowledge and tools to protect their privacy, ensuring safety, autonomy, and confidence in navigating digital and decentralized spaces.
