--- a/src/structures/gweicz/index.yaml
+++ b/src/structures/gweicz/index.yaml
@@ -10,6 +10,7 @@ projects:
   - id: ethbrno
     name: ETHBrno
     caption: Independent, privacy-focused [lunarpunk](/t/lunarpunk) hackathon hosted in Brno, Czech Republic emphasizes Ethereum and Web3 security developments.
+    img: ethbrno.jpg
     years: [ 2021 ]
     refs:
       web: https://ethbrno.cz
