add more people

--- a/src/events/2017.yaml
+++ b/src/events/2017.yaml
@@ -91,6 +91,8 @@
     - pablo-coirolo
     - Nikolai Oster
     - alena-vranova
+    - jakub-jedlinsky
+    - jan-hubik
 
 - id: 2017-10-03-life-nomadic-with-bitcoin
   name: Life nomadic with Bitcoin
