--- a/src/events/2018.yaml
+++ b/src/events/2018.yaml
@@ -236,6 +236,7 @@
     - Jakub Krcmar
     - Stepan Snigirev
     - Lidija Zavoralova
+    - arno-pfefferling
 
 
 - id: 2018-07-16-paralelni-polis-or-jde-ven
