--- a/src/events/2022.yaml
+++ b/src/events/2022.yaml
@@ -52,6 +52,8 @@
     - franzi
     - David Mihal
     - Andrej Berlin
+    - camila-ramos-garzon
+    - guillaume-ballet
   organizers:
     - mario
     - josefj
@@ -830,7 +832,7 @@
     - Mojmír Hampl
     - Lukáš Kovanda
     - Petr Bartoň
-    - Tereza Urzová
     - Honza Pobořil
     - Marianna Sádecká
     - L. Kovanda
+    - tereza-anarchy
