--- a/src/events/2023.yaml
+++ b/src/events/2023.yaml
@@ -111,6 +111,11 @@
     - Shayan Eskandari
     - Martina Bauerová
     - eleonore-blanc
+    - camila-ramos-garzon
+    - federico-kunze-kullmer
+    - guillaume-ballet
+    - radek-svarz
+    - manu-alzuru
   organizers:
     - josefj
   aftermovie: bOIYk4Hrjhw
@@ -699,6 +704,11 @@
     - Tanishq Jasoria
     - Jenny Pollack
     - Asynchronous Phil
+    - sam-hart
+    - gavin-wood
+    - federico-kunze-kullmer
+    - constanza-gallo
+    - guillaume-ballet
 
 
 - id: 2023-07-28-kyborgismus-and-or-meet-the-founders
@@ -973,6 +983,10 @@
     - Carlo Chialastri
     - Andrea Togni
     - eleonore-blanc
+    - constanza-gallo
+    - tsu-kareta
+    - kieran-mesquita
+    - andrea-togni
 
 - id: w3pn-summit-prague-2023
   name: "Web3Privacy Now Summit #1"
@@ -1779,10 +1793,10 @@
     - Jakub Engelmajer
     - Ondřej Čada
     - Dominik Stroukal
-    - Tereza Urzová
     - Ondra Plachý
     - dominik-stroukal
     - OC
+    - tereza-anarchy
 
 - id: 2023-02-17-kyborgismus-and-or-brave-new-brain
   name: Kyborgismus AND | Brave New Brain
