--- a/src/events/2020.yaml
+++ b/src/events/2020.yaml
@@ -921,7 +921,7 @@
     - Adam Růžička
     - Rivok
     - Richard Vokoun
-    - Tereza Urzová
+    - tereza-anarchy
 
 - id: 2020-01-31-juraj-bednar-or-hackni-sa
   name: Juraj Bednár | Hackni sa
